--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ section{
     padding: 5rem 9%;
 }
 /* class always start with dot(.) symbol */
+ @include media-breakpoint-up(sm) {  
 .heading{
     color: var(--white);
     font-size: 3rem;
@@ -54,6 +55,9 @@ section{
 }
 .heading span{
     font-weight: 200;
+}
+display: block;
+  }
 }
 .btn{
     background-color: var(--yellow);
