--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section{
     padding: 5rem 9%;
 }
 /* class always start with dot(.) symbol */
- @include media-breakpoint-up(sm) {  
+ @include (max-width: 1199.98px) {  
 .heading{
     color: var(--white);
     font-size: 3rem;
