--- a/style.css
+++ b/style.css
@@ -45,8 +45,15 @@ section{
     padding: 5rem 9%;
 }
 /* class always start with dot(.) symbol */
- @media (min-width: 768px) and (max-width: 1199.98px {  
-.heading{
+ @media (min-width: 768px) and (max-width: 1199.98px) {  
+.container-fluid{
+    color: var(--yellow);
+    font-size: 3rem;
+    font-weight: 200;
+    text-align: center;
+    padding-bottom: 4rem;
+}
+     .heading{
     color: var(--yellow);
     font-size: 3rem;
     font-weight: 200;
