--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ section{
 
 .home-img img{
     width: 35vw;
+    border-radius: 25%;
     animation: floatImage 4s ease-in-out infinite;
 }
 
@@ -312,6 +313,79 @@ span {
     color: var(--second-bg-color);
 }
 
+.cerificate-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.cerificate-container .cerificate-box{
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+
+.cerificate-box img{
+    width: 100%;
+    transition: .5s ease;
+}
+
+.cerificate-box:hover img{
+    transform: scale(1.1);
+}
+
+.cerificate-box .cerificate-layer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translate(100%);
+    transition: .5s ease;
+}
+
+.cerificate-box:hover .cerificate-layer{
+    transform: translate(0);
+}
+
+.cerificate-layer h4{
+    font-size: 3rem;
+}
+
+.cerificate-layer p{
+    font-size: 1.6rem;
+    margin: 3rem 0 1rem;
+}
+
+.cerificate-layer a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+
+.cerificate-layer a i{
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
+
+.contact {
+    background: var(--second-bg-color);
+}
+
 .contact h2{
     margin-bottom: 3rem;
 }
@@ -335,7 +409,7 @@ span {
     padding: 1.5rem;
     font-size: 1.6rem;
     color: var(--text-color);
-    background: var(--second-bg-color);
+    background: var(--bg-color);
     border-radius: .8rem;
     margin: .7rem 0;
 }
@@ -359,7 +433,7 @@ span {
     align-items: center;
     flex-wrap: wrap;
     padding: 2rem 9%;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .footer-text p{
@@ -482,10 +556,24 @@ span {
     .portfolio-container {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .cerificate h2 {
+        margin-bottom: 3rem;
+    }
+
+    .cerificate-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media (max-width: 617px) {
     .portfolio-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 617px) {
+    .cerificate-container {
         grid-template-columns: 1fr;
     }
 }
